--- a/index.html
+++ b/index.html
@@ -5,11 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> htmlcss-struttura-discord</title>
+
     <link rel="stylesheet" href="./asset/css/style.css">
+
 </head>
 
-<body>
+<body class="debug">
 
+    <header class="flex-container">
+        <nav class="flex-container center nmenu">
+            <img src="" alt="logo">
+
+            <ul class="unstyle flex-container link-menu">
+                <li>
+                    <a href="">
+                        link
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        link
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        link
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        link
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        link
+                    </a>
+                </li>
+            </ul>
+
+            <input type="button" value="Login">
+        </nav>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
 
 
 
