--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <div id="jumbotron">
+
+        </div>
+    </main>
 
     <footer></footer>
 
