--- a/index.html
+++ b/index.html
@@ -49,9 +49,26 @@
     </header>
 
     <main>
+
         <div id="jumbotron">
+            <div id="jumbox">
+
+            </div>
 
         </div>
+
+        <!--
+            <div class="box-img">
+
+            </div>
+
+            <section class="text">
+                <h2></h2>
+                <p></p>
+            </section>
+        -->
+
+
     </main>
 
     <footer></footer>
