--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="debug">
 
-    <header class="flex-container">
+    <header>
         <nav class="flex-container center nmenu">
             <img src="" alt="logo">
 
@@ -57,17 +57,23 @@
 
         </div>
 
-        <!--
-            <div class="box-img">
+        <div id="invite_only">
+
+            <div class="pgb-text_img center flex-container" id="io_box">
+
+                <div class="box-img">
+
+                </div>
+
+                <section class="text">
+                    <h2></h2>
+                    <p></p>
+                </section>
 
             </div>
 
-            <section class="text">
-                <h2></h2>
-                <p></p>
-            </section>
-        -->
 
+        </div>
 
     </main>
 
