finish section comunity and fandom.
copy to section invite_only and modify flex-directio in comunity section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,43 @@
 
         <div id="invite_only">
 
-            <div class="pgb-text_img center flex-container" id="io_box">
+            <div class="pgb-text_img center flex-container">
+
+                <div class="box-img">
+
+                </div>
+
+                <section class="text">
+                    <h2></h2>
+                    <p></p>
+                </section>
+
+            </div>
+
+
+        </div>
+
+        <div id="community">
+
+            <div class="pgb-text_img center flex-container">
+
+                <div class="box-img">
+
+                </div>
+
+                <section class="text">
+                    <h2></h2>
+                    <p></p>
+                </section>
+
+            </div>
+
+
+        </div>
+
+        <div id="fandom">
+
+            <div class="pgb-text_img center flex-container">
 
                 <div class="box-img">
 
