--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <input type="button" value="Login">
         </nav>
     </header>
-
+    <!-- /header-->
     <main>
 
         <div id="jumbotron">
@@ -56,6 +56,7 @@
             </div>
 
         </div>
+        <!-- /jumbotron-->
 
         <div id="invite_only">
 
@@ -74,6 +75,7 @@
 
 
         </div>
+        <!-- /invite_only-->
 
         <div id="community">
 
@@ -92,6 +94,7 @@
 
 
         </div>
+        <!-- /community-->
 
         <div id="fandom">
 
@@ -110,10 +113,20 @@
 
 
         </div>
+        <!-- /fandom-->
+
+        <div id="technology">
+            <div class="tech_box center">
+
+            </div>
+        </div>
+        <!-- /technology-->
 
     </main>
+    <!-- /main-->
 
     <footer></footer>
+    <!-- /footer-->
 
 
 
