--- a/index.html
+++ b/index.html
@@ -122,10 +122,21 @@
         </div>
         <!-- /technology-->
 
+        <div id="extra_link">
+
+        </div>
+        <!--/extra_link-->
+
     </main>
     <!-- /main-->
 
-    <footer></footer>
+    <footer id="footer">
+
+        <div id="fmenu center flex-container">
+
+        </div>
+
+    </footer>
     <!-- /footer-->
 
 
