extra_link section

--- a/index.html
+++ b/index.html
@@ -124,6 +124,31 @@
 
         <div id="extra_link">
 
+            <div class="el-box center flex-container">
+
+                <div class="external_link">
+
+                </div>
+
+                <div class="internal_link">
+
+                </div>
+
+                <div class="internal_link">
+
+                </div>
+
+                <div class="internal_link">
+
+                </div>
+
+                <div class="internal_link">
+
+                </div>
+
+            </div>
+            <!-- /#el-box -->
+
         </div>
         <!--/extra_link-->
 
