--- a/index.html
+++ b/index.html
@@ -155,9 +155,13 @@
     </main>
     <!-- /main-->
 
-    <footer id="footer">
+    <footer>
 
-        <div id="fmenu center flex-container">
+        <div class="fmenu center flex-container">
+
+            <img src="" alt="logo">
+
+            <input type="button" value="Login">
 
         </div>
 
